--- a/index.html
+++ b/index.html
@@ -3,73 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atelier Citoyen Durable & Coopératif</title>
+    <title>ACDC - Atelier Citoyen Durable & Coopératif</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-green-50 text-gray-800">
+<body class="bg-white">
 
-    <!-- Navbar -->
-    <nav class="bg-green-700 p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <img src="ACDC_v4_3_version finale sélectionnée.jpg" alt="Logo de l'ACDC" class="w-12">
-            <ul class="flex space-x-6 text-white">
-                <li><a href="#accueil" class="hover:text-green-300">Accueil</a></li>
-                <li><a href="#actions" class="hover:text-green-300">Nos actions</a></li>
-                <li><a href="#association" class="hover:text-green-300">L’association</a></li>
-                <li><a href="#equipe" class="hover:text-green-300">L’équipe</a></li>
-                <li><a href="#agenda" class="hover:text-green-300">Agenda</a></li>
-                <li><a href="#documentation" class="hover:text-green-300">Documentation</a></li>
-            </ul>
-        </div>
-    </nav>
+<!-- Header Section (Fixed) -->
+<header class="bg-white py-4 fixed top-0 w-full z-50 shadow-md">
+    <div class="container mx-auto flex flex-col items-center">
+        <!-- Logo -->
+        <img src="images/ACDC_image.jpg" alt="Logo de l'ACDC" class="w-48 md:w-64 lg:w-72">
 
-    <!-- Section Accueil -->
-    <section id="accueil" class="py-12 bg-white text-center">
-        <div class="container mx-auto">
-            <img src="ACDC_v4_3_version finale sélectionnée.jpg" alt="Logo de l'ACDC" class="w-24 mx-auto mb-4">
-            <h1 class="text-3xl font-bold text-green-700">Atelier Citoyen Durable & Coopératif</h1>
-            <p class="mt-4 text-lg">
-                L’Atelier Citoyen Durable et Coopératif est une association créée en 2024 par un groupe de bouchemainois, 
-                soucieux de s’engager dans des actions pour la transition, l’environnement, l’éco-citoyenneté.
-            </p>
-            <a href="#contact" class="mt-6 inline-block bg-green-700 text-white py-2 px-4 rounded hover:bg-green-600">Rejoignez-nous</a>
-        </div>
-    </section>
+        <!-- Divider Line (Hidden on mobile) -->
+        <div class="border-t border-green-500 w-full max-w-lg my-2 hidden md:block"></div>
 
-    <!-- Section Nos actions -->
-    <section id="actions" class="py-12 bg-gray-100">
-        <div class="container mx-auto">
-            <h2 class="text-2xl font-bold text-center text-green-700 mb-8">Nos actions</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Card 1: Repair Café -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <img src="repair_cafe_image.jpg" alt="Repair Café" class="rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-green-700 mb-2">Repair Café</h3>
-                    <p>Apprendre à réparer plutôt que jeter, tel est l’objectif principal d’un repair café. Venez nous rejoindre chaque mois.</p>
-                </div>
-                <!-- Card 2: Piège à frelon asiatique -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <img src="frelon_image.jpg" alt="Piège à frelon" class="rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-green-700 mb-2">Piège à frelon asiatique</h3>
-                    <p>Les frelons asiatiques sont des prédateurs redoutables pour les abeilles. Venez fabriquer des pièges avec nous !</p>
-                </div>
-                <!-- Card 3: Plantations d’arbres fruitiers -->
-                <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <img src="plantation_image.jpg" alt="Plantations d'arbres" class="rounded-lg mb-4">
-                    <h3 class="text-xl font-semibold text-green-700 mb-2">Plantations d’arbres fruitiers</h3>
-                    <p>Participez à notre initiative de plantation d'arbres fruitiers locaux et bio. Rejoignez-nous pour planter des arbres !</p>
-                </div>
-            </div>
-        </div>
-    </section>
+        <!-- Desktop Menu -->
+        <nav class="flex space-x-8 text-gray-700 font-bold" id="desktop-menu">
+            <a href="#accueil" class="hover:text-green-500 py-2 transition-all duration-300">Accueil</a>
+            <a href="#actions" class="hover:text-green-500 py-2 transition-all duration-300">Nos actions</a>
+            <a href="#association" class="hover:text-green-500 py-2 transition-all duration-300">L’association</a>
+            <a href="#equipe" class="hover:text-green-500 py-2 transition-all duration-300">L’équipe</a>
+            <a href="#agenda" class="hover:text-green-500 py-2 transition-all duration-300">Agenda</a>
+            <a href="#documentation" class="hover:text-green-500 py-2 transition-all duration-300">Documentation</a>
+        </nav>
+    </div>
+</header>
 
-    <!-- Footer -->
-    <footer class="bg-green-700 text-white py-6">
-        <div class="container mx-auto text-center">
-            <p>Contactez-nous : <a href="mailto:contact@acdc-bouchemaine.fr" class="text-green-300">contact@acdc-bouchemaine.fr</a></p>
-            <p>Visitez notre site web : <a href="https://www.acdc-bouchemaine.fr" class="text-green-300">www.acdc-bouchemaine.fr</a></p>
-        </div>
-    </footer>
+<!-- Spacer to account for the fixed header height -->
+<div class="h-40"></div>
+
+<!-- Sections -->
+<section id="accueil" class="h-screen bg-green-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">Accueil</h2>
+</section>
+
+<section id="actions" class="h-screen bg-gray-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">Nos Actions</h2>
+</section>
+
+<section id="association" class="h-screen bg-green-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">L'Association</h2>
+</section>
+
+<section id="equipe" class="h-screen bg-gray-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">L'Équipe</h2>
+</section>
+
+<section id="agenda" class="h-screen bg-green-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">Agenda</h2>
+</section>
+
+<section id="documentation" class="h-screen bg-gray-50 pt-16">
+    <h2 class="text-center text-4xl mt-24">Documentation</h2>
+</section>
+
+<!-- JavaScript for Active Menu Highlight and Scroll Handling -->
+<script>
+    const sections = document.querySelectorAll('section');
+    const menuLinks = document.querySelectorAll('#desktop-menu a');
+    const headerHeight = document.querySelector('header').offsetHeight;
+
+    // Scroll to section on menu click
+    menuLinks.forEach(link => {
+        link.addEventListener('click', (event) => {
+            event.preventDefault();
+            const targetId = link.getAttribute('href').substring(1);
+            const targetSection = document.getElementById(targetId);
+            window.scrollTo({
+                top: targetSection.offsetTop - headerHeight, // Adjust scroll position based on header height
+                behavior: 'smooth'
+            });
+        });
+    });
+
+    // Remove all active underline classes
+    function removeActiveUnderline() {
+        menuLinks.forEach(link => {
+            link.classList.remove('border-b-2', 'border-green-500');
+        });
+    }
+
+    // Add active underline to the correct menu item based on scroll position
+    function setActiveMenu() {
+        let currentSection = '';
+
+        sections.forEach(section => {
+            const sectionTop = section.offsetTop - headerHeight - 10; // Offset for header height
+            if (window.pageYOffset >= sectionTop) {
+                currentSection = section.getAttribute('id');
+            }
+        });
+
+        // Update the active state
+        menuLinks.forEach(link => {
+            if (link.getAttribute('href').substring(1) === currentSection) {
+                removeActiveUnderline();
+                link.classList.add('border-b-2', 'border-green-500');
+            }
+        });
+    }
+
+    // Run setActiveMenu on scroll
+    window.addEventListener('scroll', setActiveMenu);
+</script>
 
 </body>
 </html>
